test/types/sync/syncNothing.good
syncNothing.chpl:5: error: sync types cannot contain type 'nothing'
